--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,16 +4,19 @@ body {
 .h1 {
   font-weight: 900;
 }
-.h2, h2 {
+.h2,
+h2 {
   font-weight: 800;
 }
-.h3, h3 {
+.h3,
+h3 {
   font-weight: 700;
 }
 .h4 {
   font-weight: 600;
 }
-h5, h6 {
+h5,
+h6 {
   font-weight: 700;
 }
 .preloader {
